<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ble_remote_control_button_any_problem_txt">Troubleshooting</string>
    <string name="ble_remote_control_button_pair_new_controller_txt">Pair new controller</string>
    <string name="ble_remote_control_c1_button_custom_description_txt">You can assign another function to the C1 button on the Bluetooth remote control</string>
    <string name="ble_remote_control_c1_button_custom_title_txt">C1 button customization</string>
    <string name="ble_remote_control_c1_photopro_focus_mode_txt">Focus mode</string>
    <string name="ble_remote_control_c1_photopro_lens_txt">Lens</string>
    <string name="ble_remote_control_c1_photopro_shooting_mode_txt">Shooting mode</string>
    <string name="ble_remote_control_c1_photopro_switch_main_front_txt">Switch main/front camera</string>
    <string name="ble_remote_control_c1_photopro_switch_photo_video_txt">Switch photo/video</string>
    <string name="ble_remote_control_c1_videopro_lens_txt">Lens</string>
    <string name="ble_remote_control_c1_videopro_switch_af_mf_txt">Switch AF/MF</string>
    <string name="ble_remote_control_c1_videopro_switch_main_front_txt">Switch main/front camera</string>
    <string name="ble_remote_control_cta_dialog_button_allow_txt">Allow</string>
    <string name="ble_remote_control_cta_dialog_button_deny_txt">Deny</string>
    <string name="ble_remote_control_cta_dialog_text_txt">Allow the app to use Bluetooth for this feature?</string>
    <string name="ble_remote_control_description_txt">"You can pair a Sony remote control via Bluetooth to remotely use functions in %1$s.
Tap Pair new controller to start pairing a new device."</string>
    <string name="ble_remote_control_dialog_already_paired_txt">Already paired</string>
    <string name="ble_remote_control_dialog_any_problem_text_txt">If the remote could not be paired with the device, go to Settings and check if the remote is already registered in the Bluetooth device list. If already registered, remove the remote from the list and try pairing it again.</string>
    <string name="ble_remote_control_dialog_any_problem_title_txt">Troubleshooting</string>
    <string name="ble_remote_control_dialog_button_agree_and_turn_on_txt">Agree and turn on</string>
    <string name="ble_remote_control_dialog_button_decline_txt">Decline</string>
    <string name="ble_remote_control_dialog_button_exit_txt">Exit</string>
    <string name="ble_remote_control_dialog_button_go_to_settings_txt">Go to Settings</string>
    <string name="ble_remote_control_dialog_button_ok_txt">OK</string>
    <string name="ble_remote_control_dialog_error_bluetooth_off_txt">Pairing canceled because Bluetooth was turned off</string>
    <string name="ble_remote_control_dialog_error_timeout_txt">Pairing failed due to timeout. Try again later.</string>
    <string name="ble_remote_control_endurance_mode_description_1_txt">This device may limit certain functions as a precaution when under intensive use. If you turn on Camera endurance mode, an icon will be displayed to indicate that the app will maintain high performance. When this icon is displayed, you can use the app for a longer period of time.</string>
    <string name="ble_remote_control_endurance_mode_description_2_txt">Camera endurance mode is only available when using %1$s with a remote control connected via Bluetooth. Closing %1$s will disable this function.</string>
    <string name="ble_remote_control_endurance_mode_dialog_main_message_txt">The device temperature may increase above typical operating temperature. When the temperature increases a notification and icon will alert you. In this case, don’t hold the device in your hand. Please make sure the remote control is connected via Bluetooth before continuing.</string>
    <string name="ble_remote_control_endurance_mode_dialog_title_attention_txt">Attention</string>
    <string name="ble_remote_control_endurance_mode_dialog_to_connect_remote_to_continue_txt">"Device temperature too high. %1$s will shut down temporarily in order to cool down.
If you connect a Bluetooth remote control, you can continue to use %1$s with Camera endurance mode."</string>
    <string name="ble_remote_control_endurance_mode_dialog_to_connect_remote_txt">"Device temperature too high. %1$s will shut down temporarily in order to cool down.
If you connect a Bluetooth remote control, you can use %1$s with Camera endurance mode."</string>
    <string name="ble_remote_control_endurance_mode_dialog_to_enable_remote_txt">To use this function, enable [Use remote control] after pairing a remote control via Bluetooth.</string>
    <string name="ble_remote_control_endurance_mode_dialog_to_turn_on_endurance_txt">"Device temperature too high. %1$s will shut down temporarily in order to cool down.
If you turn on Camera endurance mode, you can use %1$s with a Bluetooth remote control."</string>
    <string name="ble_remote_control_endurance_mode_dialog_to_use_remote_txt">"To enable this function, interact with the connected remote control.
To cancel, tap EXIT."</string>
    <string name="ble_remote_control_endurance_mode_enabled_txt">Camera endurance mode enabled</string>
    <string name="ble_remote_control_endurance_mode_txt">Camera endurance mode</string>
    <string name="ble_remote_control_off_txt">Off</string>
    <string name="ble_remote_control_on_txt">On</string>
    <string name="ble_remote_control_pair_new_controller_description_txt">"To start pairing, interact with the remote controller.
You will receive notifications and dialogs two times. Select PAIR on all of them, then press any key on the paired device to finish pairing."</string>
    <string name="ble_remote_control_pair_new_controller_txt">Pair new controller</string>
    <string name="ble_remote_control_title_txt">Bluetooth remote control</string>
    <string name="ble_remote_control_use_remote_controller_txt">Use remote control</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cam_strings_common">Common</string>
    <string name="cam_strings_control">Control</string>
    <string name="cam_strings_light">Light</string>
    <string name="cam_strings_photo">Photo</string>
    <string name="cam_strings_shutterless">Shutterless</string>
    <string name="cam_strings_video">Video</string>
    <string name="capturing_mode_selector_bidicheck_string">@string/photopro_strings_application_name_txt</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="commonsetting_default_auto_upload">OFF</string>
    <string name="commonsetting_default_do_not_show_again_check_for_geotag_dialog">NOT_CHECKED</string>
    <string name="debug_preference_entry_title_auto_power_off">Disable Auto Power Off Timer</string>
    <string name="debug_preference_entry_title_camera_settings">PhotoPro Settings</string>
    <string name="debug_preference_entry_title_device_state_transition_restricted">Throw exception if there are illegal state transition.</string>
    <string name="debug_preference_entry_title_force_migrate_settings">Force migrate settings</string>
    <string name="debug_preference_entry_title_low_power_mode">Disable low power mode on high temp.</string>
    <string name="debug_preference_title_debug_mode">Debug Mode</string>
    <string name="key_debug_camera_settings">KEY_DEBUG_CHANGE_CAMERA_SETTINGS</string>
    <string name="key_debug_device_state_transition_restricted">KEY_DEBUG_DEVICE_STATE_TRANSITION_RESTRICTED</string>
    <string name="key_debug_disable_auto_power_off">KEY_DEBUG_DISABLE_AUTO_POWER_OFF</string>
    <string name="key_debug_disable_low_power_mode">KEY_DEBUG_DISABLE_LOW_POWER_MODE</string>
    <string name="key_debug_force_migrate_settings">KEY_DEBUG_FORCE_MIGRATE_SETTINGS</string>
    <string name="photopro_strings_accessibility_arrow_left_button_txt">Left arrow</string>
    <string name="photopro_strings_accessibility_arrow_right_button_txt">Right arrow</string>
    <string name="photopro_strings_accessibility_close_txt">Close</string>
    <string name="photopro_strings_accessibility_previous_txt">Previous</string>
    <string name="photopro_strings_addon_button_menu_txt">More</string>
    <string name="photopro_strings_application_name_google_lens_txt">Google Lens</string>
    <string name="photopro_strings_disp_txt">DISP</string>
    <string name="photopro_strings_drive_mode_txt">Drive mode</string>
    <string name="photopro_strings_error_high_temp_shut_down_no_txt">No</string>
    <string name="photopro_strings_error_high_temp_shut_down_yes_txt">Yes</string>
    <string name="photopro_strings_exposure_value_txt">EV</string>
    <string name="photopro_strings_f_value_2_0_txt">F2.0</string>
    <string name="photopro_strings_face_eye_af_settings_txt">Face/Eye AF</string>
    <string name="photopro_strings_flash_txt">Flash mode</string>
    <string name="photopro_strings_focus_area_txt">Focus area</string>
    <string name="photopro_strings_focus_mode_txt">Focus mode</string>
    <string name="photopro_strings_lens_txt">Lens</string>
    <string name="photopro_strings_menu_txt">MENU</string>
    <string name="photopro_strings_metering_txt">Metering mode</string>
    <string name="photopro_strings_ruler_label_exposure_value_negative_txt">−</string>
    <string name="photopro_strings_ruler_label_exposure_value_plus_txt">+</string>
    <string name="photopro_strings_shooting_mode_txt">Shooting mode</string>
    <string name="photopro_strings_tutorial_button_got_it_txt">Got it</string>
    <string name="photopro_strings_tutorial_button_next_txt">Next</string>
    <string name="photopro_strings_whitebalance_txt">White balance</string>
</resources>