<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/debug_preference_title_debug_mode">
        <SwitchPreference android:title="@string/debug_preference_entry_title_auto_power_off" android:key="@string/key_debug_disable_auto_power_off" />
        <SwitchPreference android:title="@string/debug_preference_entry_title_low_power_mode" android:key="@string/key_debug_disable_low_power_mode" />
        <Preference android:title="@string/debug_preference_entry_title_force_migrate_settings" android:key="@string/key_debug_force_migrate_settings" />
        <SwitchPreference android:title="@string/debug_preference_entry_title_device_state_transition_restricted" android:key="@string/key_debug_device_state_transition_restricted" />
        <Preference android:title="@string/debug_preference_entry_title_camera_settings" android:key="@string/key_debug_camera_settings">
            <intent android:targetPackage="com.sonymobile.photopro" android:targetClass="com.sonymobile.photopro.debug.DebugCameraSettingsActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
