<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:id="@id/mode" android:layout_width="fill_parent" android:layout_height="@dimen/photopro_button_large_size" android:src="@drawable/photopro_shooting_mode_s_icn" android:hapticFeedbackEnabled="true" android:contentDescription="@string/photopro_strings_shooting_mode_txt" app:layout_constraintTop_toTopOf="parent" />
    <Button android:id="@id/menu" android:layout_width="fill_parent" android:layout_height="@dimen/photopro_button_small_size" android:text="@string/photopro_strings_menu_txt" android:textAllCaps="true" app:layout_constraintBottom_toTopOf="@id/disp" app:layout_constraintTop_toBottomOf="@id/mode" />
    <Button android:id="@id/disp" android:layout_width="fill_parent" android:layout_height="@dimen/photopro_button_small_size" android:text="@string/photopro_strings_disp_txt" android:textAllCaps="true" app:layout_constraintBottom_toTopOf="@id/aperture" app:layout_constraintTop_toBottomOf="@id/menu" />
    <Button android:id="@id/aperture" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/photopro_button_small_size" android:text="@string/photopro_strings_f_value_2_0_txt" app:layout_constraintBottom_toTopOf="@id/lens" app:layout_constraintTop_toBottomOf="@id/disp" />
    <LinearLayout android:orientation="vertical" android:id="@id/lens" android:layout_width="fill_parent" android:layout_height="@dimen/photopro_button_small_size" app:layout_constraintBottom_toTopOf="@id/contents_container" app:layout_constraintTop_toBottomOf="@id/aperture" style="?buttonStyle">
        <TextView android:textAppearance="@style/TextAppearance.PhotoPro.Widget.Button.Hint" android:gravity="center_horizontal" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/photopro_strings_lens_txt" />
        <TextView android:textAppearance="@style/TextAppearance.PhotoPro.Widget.Button" android:gravity="center_horizontal" android:id="@id/label" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <com.sonymobile.photopro.view.contentsview.ContentsContainer android:id="@id/contents_container" android:layout_width="fill_parent" android:layout_height="@dimen/photopro_button_large_size" android:foreground="?android:selectableItemBackground" app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
