<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/memory_recall_left_panel_drive_mode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <com.sonymobile.photopro.view.widget.FnButton android:id="@id/memory_recall_drive_mode" android:layout_width="@dimen/memory_recall_icon_width" android:layout_height="@dimen/memory_recall_icon_height" android:contentDescription="@string/photopro_strings_drive_mode_txt" android:layout_marginEnd="@dimen/memory_recall_icon_margin" android:paddingVertical="0.0dip" app:iconSrc="@drawable/photopro_drivemode_single_icn" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/memory_recall_focus_mode" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.PhotoPro.FnButton" />
        <com.sonymobile.photopro.view.widget.FnButton android:id="@id/memory_recall_focus_mode" android:layout_width="@dimen/memory_recall_icon_width" android:layout_height="@dimen/memory_recall_icon_height" android:contentDescription="@string/photopro_strings_focus_mode_txt" android:layout_marginEnd="@dimen/memory_recall_icon_margin" android:paddingVertical="0.0dip" app:iconSrc="@drawable/photopro_focusmode_afs_icn" app:layout_constraintBottom_toBottomOf="@id/memory_recall_drive_mode" app:layout_constraintEnd_toStartOf="@id/memory_recall_focus_area" app:layout_constraintStart_toEndOf="@id/memory_recall_drive_mode" app:layout_constraintTop_toTopOf="@id/memory_recall_drive_mode" style="@style/Widget.PhotoPro.FnButton" />
        <com.sonymobile.photopro.view.widget.FnButton android:id="@id/memory_recall_focus_area" android:layout_width="@dimen/memory_recall_icon_width" android:layout_height="@dimen/memory_recall_icon_height" android:contentDescription="@string/photopro_strings_focus_area_txt" android:layout_marginEnd="@dimen/memory_recall_icon_margin" android:paddingVertical="0.0dip" app:iconSrc="@drawable/photopro_focusarea_wide_icn" app:layout_constraintBottom_toBottomOf="@id/memory_recall_drive_mode" app:layout_constraintEnd_toStartOf="@id/memory_recall_metering" app:layout_constraintStart_toEndOf="@id/memory_recall_focus_mode" app:layout_constraintTop_toTopOf="@id/memory_recall_drive_mode" style="@style/Widget.PhotoPro.FnButton" />
        <com.sonymobile.photopro.view.widget.FnButton android:id="@id/memory_recall_metering" android:layout_width="@dimen/memory_recall_icon_width" android:layout_height="@dimen/memory_recall_icon_height" android:contentDescription="@string/photopro_strings_metering_txt" android:layout_marginEnd="@dimen/memory_recall_icon_margin" android:paddingVertical="0.0dip" app:iconSrc="@drawable/photopro_metering_multi_icn" app:layout_constraintBottom_toBottomOf="@id/memory_recall_drive_mode" app:layout_constraintEnd_toStartOf="@id/memory_recall_flash" app:layout_constraintStart_toEndOf="@id/memory_recall_focus_area" app:layout_constraintTop_toTopOf="@id/memory_recall_drive_mode" style="@style/Widget.PhotoPro.FnButton" />
        <com.sonymobile.photopro.view.widget.FnButton android:id="@id/memory_recall_flash" android:layout_width="@dimen/memory_recall_icon_width" android:layout_height="@dimen/memory_recall_icon_height" android:contentDescription="@string/photopro_strings_flash_txt" android:layout_marginEnd="@dimen/memory_recall_icon_margin" android:paddingVertical="0.0dip" app:iconSrc="@drawable/photopro_flash_off_icn" app:layout_constraintBottom_toBottomOf="@id/memory_recall_drive_mode" app:layout_constraintEnd_toStartOf="@id/memory_recall_white_balance" app:layout_constraintStart_toEndOf="@id/memory_recall_metering" app:layout_constraintTop_toTopOf="@id/memory_recall_drive_mode" style="@style/Widget.PhotoPro.FnButton" />
        <com.sonymobile.photopro.view.widget.FnButton android:id="@id/memory_recall_white_balance" android:layout_width="@dimen/memory_recall_icon_width" android:layout_height="@dimen/memory_recall_icon_height" android:contentDescription="@string/photopro_strings_whitebalance_txt" android:layout_marginEnd="@dimen/memory_recall_icon_margin" android:paddingVertical="0.0dip" app:iconSrc="@drawable/photopro_wb_awb_icn" app:layout_constraintBottom_toBottomOf="@id/memory_recall_drive_mode" app:layout_constraintEnd_toStartOf="@id/memory_recall_face_eye" app:layout_constraintStart_toEndOf="@id/memory_recall_flash" app:layout_constraintTop_toTopOf="@id/memory_recall_drive_mode" style="@style/Widget.PhotoPro.FnButton" />
        <com.sonymobile.photopro.view.widget.FnButton android:id="@id/memory_recall_face_eye" android:layout_width="@dimen/memory_recall_icon_width" android:layout_height="@dimen/memory_recall_icon_height" android:contentDescription="@string/photopro_strings_face_eye_af_settings_txt" android:paddingVertical="0.0dip" app:iconSrc="@drawable/photopro_face_eye_off_icn" app:layout_constraintBottom_toBottomOf="@id/memory_recall_drive_mode" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/memory_recall_white_balance" app:layout_constraintTop_toTopOf="@id/memory_recall_drive_mode" style="@style/Widget.PhotoPro.FnButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
