<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_basic_operation_left_pane_auto_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:binding="http://schemas.android.com/apk/res-auto">
    <com.sonymobile.photopro.view.widget.OutlinedButton android:id="@id/google_lens_area" android:tag="binding_1" android:layout_width="@dimen/auto_mode_google_lens_area_width" android:layout_height="fill_parent" android:hapticFeedbackEnabled="true" android:contentDescription="@string/photopro_strings_application_name_google_lens_txt" binding:layout_constraintBottom_toBottomOf="parent" binding:layout_constraintStart_toEndOf="@id/add_on" binding:layout_constraintTop_toTopOf="parent" style="@style/Widget.PhotoPro.AutoHeaderOutlinedButton" />
    <ImageView android:id="@id/google_lens" android:tag="binding_2" android:layout_width="@dimen/auto_mode_small_icon_width" android:layout_height="@dimen/auto_mode_small_icon_height" android:src="@drawable/cam_cap_mode_google_lens_icn" android:layout_marginStart="@dimen/auto_mode_icon_margin_start" binding:layout_constraintBottom_toBottomOf="parent" binding:layout_constraintStart_toEndOf="@id/add_on" binding:layout_constraintTop_toTopOf="parent" />
    <com.sonymobile.photopro.view.widget.OutlinedButton android:id="@id/add_on" android:tag="binding_3" android:layout_width="@dimen/photopro_button_large_size" android:layout_height="fill_parent" android:text="@string/photopro_strings_addon_button_menu_txt" android:textAllCaps="true" binding:layout_constraintStart_toStartOf="parent" style="@style/Widget.PhotoPro.AutoHeaderOutlinedButton" />
    <com.sonymobile.photopro.view.widget.OutlinedButton android:id="@id/menu" android:tag="binding_4" android:layout_width="@dimen/photopro_button_large_size" android:layout_height="fill_parent" android:text="@string/photopro_strings_menu_txt" android:textAllCaps="true" binding:layout_constraintEnd_toStartOf="@id/mode" binding:layout_goneMarginEnd="@dimen/auto_mode_icon_margin_end" style="@style/Widget.PhotoPro.AutoHeaderOutlinedButton" />
    <ImageButton android:id="@id/mode" android:tag="binding_5" android:layout_width="@dimen/photopro_button_large_size" android:layout_height="fill_parent" android:src="@drawable/photopro_shooting_mode_basic_icn" android:hapticFeedbackEnabled="true" android:contentDescription="@string/photopro_strings_shooting_mode_txt" binding:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
