<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/slider" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" style="@style/Widget.PhotoPro.DialPicker.Title" />
    <com.sonymobile.photopro.view.widget.EvSlider android:id="@id/slider" android:background="@null" android:clickable="true" android:layout_width="0.0dip" android:layout_height="@dimen/photopro_ev_slider_height" android:progressDrawable="@null" android:thumb="@drawable/photopro_right_dial_scale_pointer_down" android:soundEffectsEnabled="false" android:hapticFeedbackEnabled="false" android:contentDescription="@string/photopro_strings_exposure_value_txt" android:layoutDirection="ltr" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/plus" app:layout_constraintStart_toEndOf="@id/minus" app:layout_constraintTop_toBottomOf="@id/title" app:layout_constraintWidth_max="@dimen/photopro_ev_slider_width" />
    <TextView android:id="@id/minus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photopro_strings_ruler_label_exposure_value_negative_txt" android:includeFontPadding="true" app:layout_constraintBottom_toBottomOf="@id/slider" app:layout_constraintEnd_toStartOf="@id/slider" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toEndOf="@id/arrow_left_icon" style="@style/Widget.PhotoPro.DialPicker.Item" />
    <TextView android:id="@id/plus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photopro_strings_ruler_label_exposure_value_plus_txt" android:includeFontPadding="true" app:layout_constraintBottom_toBottomOf="@id/slider" app:layout_constraintEnd_toStartOf="@id/arrow_right_icon" app:layout_constraintStart_toEndOf="@id/slider" style="@style/Widget.PhotoPro.DialPicker.Item" />
    <ImageButton android:id="@id/arrow_left_button" android:background="@color/arrow_button_background_color_transparent" android:layout_width="@dimen/photopro_dial_arrow_button_size" android:layout_height="0.0dip" android:contentDescription="@string/photopro_strings_accessibility_arrow_left_button_txt" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/arrow_left_icon" android:background="@drawable/photopro_right_dial_arrow_left_icn" android:clickable="false" android:layout_width="@dimen/photopro_dial_arrow_button_size" android:layout_height="@dimen/photopro_dial_arrow_button_size" app:layout_constraintBottom_toBottomOf="@id/slider" app:layout_constraintStart_toStartOf="parent" />
    <ImageButton android:id="@id/arrow_right_button" android:background="@color/arrow_button_background_color_transparent" android:layout_width="@dimen/photopro_dial_arrow_button_size" android:layout_height="0.0dip" android:contentDescription="@string/photopro_strings_accessibility_arrow_right_button_txt" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/arrow_right_icon" android:background="@drawable/photopro_right_dial_arrow_right_icn" android:clickable="false" android:layout_width="@dimen/photopro_dial_arrow_button_size" android:layout_height="@dimen/photopro_dial_arrow_button_size" app:layout_constraintBottom_toBottomOf="@id/slider" app:layout_constraintEnd_toEndOf="parent" />
    <View android:id="@id/slider_touch_area" android:focusable="false" android:clickable="false" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/slider" app:layout_constraintStart_toStartOf="@id/slider" app:layout_constraintTop_toTopOf="@id/slider" />
    <ImageButton android:id="@id/close" android:layout_width="@dimen/photopro_submenu_button_size" android:layout_height="@dimen/photopro_submenu_button_size" android:src="@drawable/photopro_common_close_icn" android:contentDescription="@string/photopro_strings_accessibility_close_txt" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
