<?xml version="1.0" encoding="utf-8"?>
<com.sonymobile.photopro.view.tutorial.FeatureListContentNavigator android:layout_gravity="bottom" android:id="@id/tutorial_view_paging_navigator" android:layout_width="fill_parent" android:layout_height="@dimen/paging_tutorial_navigator_height" android:layoutDirection="ltr"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="left" android:id="@id/page_tutorial_prev_icon_button" android:visibility="invisible" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/photopro_common_back_icn" android:contentDescription="@string/photopro_strings_accessibility_previous_txt" />
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/page_tutorial_paging_navigation" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layoutDirection="ltr" />
    <TextView android:textStyle="normal" android:textColor="@color/tutorial_got_it_button" android:gravity="center_vertical" android:layout_gravity="right" android:id="@id/page_tutorial_next_button" android:background="@drawable/tutorial_button_selector" android:paddingLeft="14.0dip" android:paddingRight="14.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/photopro_strings_tutorial_button_next_txt" android:maxLines="1" android:contentDescription="@string/photopro_strings_tutorial_button_next_txt" android:textAllCaps="true" style="@style/TutorialPagingText" />
    <TextView android:textSize="@dimen/tutorial_button_text_size" android:textStyle="normal" android:textColor="#ff000000" android:gravity="center_vertical" android:layout_gravity="right" android:id="@id/page_tutorial_gotit_button" android:background="@drawable/photopro_tutorial_got_it_button" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/photopro_strings_tutorial_button_got_it_txt" android:maxLines="1" android:contentDescription="@string/photopro_strings_tutorial_button_got_it_txt" android:textAllCaps="true" android:fontFamily="sans-serif-medium" android:layout_marginVertical="@dimen/paging_tutorial_navigator_gotit_button_vertical_margin" />
</com.sonymobile.photopro.view.tutorial.FeatureListContentNavigator>
